# sabers

./: Cargo.toml
examples/: read-map.rs  read-replay.rs
src/: lib.rs
src/schemas/: bsor.rs  mod.rs
src/schemas/beatmap/: mod.rs  standard.rs  util.rs  v2.rs  v3.rs
src/schemas/mapinfo/: mod.rs  standard.rs  v2.rs
src/util/: fs.rs
tests/data/replays/: replay1.bsor
