[package]
name = "sabers"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = { version = "2.1", default-features = false, features = [ "deflate-zlib-ng" ] }
serde = { version = "1", features = [ "derive" ] }
serde_repr = "0.1"
regex = "1.10"
simd-json = "0.13"
thiserror = "1.0"
glam = "0.27"

[dev-dependencies]
reqwest = "0.12"
anyhow = "1.0"
