[package]
name = "sabers"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = { version = "2", optional = true, default-features = false, features = [ "deflate" ] }
flate2 = { version = "1.0", optional = true, default-features = false, features = [ "rust_backend" ] }
sha1_smol = "1.0"
serde = { version = "1", features = [ "derive" ] }
serde_repr = "0.1"
simd-json = "0.14"
thiserror = "2.0"
glam = "0.29"

[features]
default = [ "zip" ]
zip = [ "dep:zip", "dep:flate2" ]

[dev-dependencies]
reqwest = "0.12"
anyhow = "1.0"
